fixed errorstatematcher for the whitelist formgroup. Need to delete excessive code in an attempt to fix this error. Two good sprints and i might be done and ready for testing and deployment.

--- a/src/app/keys/keys.component.html
+++ b/src/app/keys/keys.component.html
@@ -19,6 +19,11 @@
                 <td mdcDataTableCell>
                 {{key.api_key}} 
                 </td>
+                <td mdcDataTableCell>
+                    <button mdc-icon-button (click)="delete(key)">
+                        <mdc-icon>delete_outline</mdc-icon>
+                    </button>
+                </td>
 
             </tr>
         </tbody>
