--- a/src/app/pricing/pricing-card.component.html
+++ b/src/app/pricing/pricing-card.component.html
@@ -1,29 +1,36 @@
 <mdc-card>
     <div class="card__title">
-        <div mdcHeadline5>{{pricePlan.title}}</div>
-        <p class="card__subtitle">{{pricePlan.description}}</p>
-        <div>${{pricePlan.price}}/month</div>
+        <div mdcHeadline5 *ngIf="plan?.nickname">{{plan.nickname}}</div>
+        <p class="card__subtitle" *ngIf="service?.description">{{service?.description}}</p>
+        <div *ngIf="plan?.amount">{{(plan?.amount / 100) | currency: 'USD':'symbol'}}/month</div>
     </div>
 
     <div>
         <ul>
-            <li class="price__offerings" mdcBody2>
-                {{pricePlan.preview_limit}} requests/hour
+            <li class="price__offerings" mdcBody2 *ngIf="service?.preview_limit">
+                {{service?.preview_limit}} requests/hour
 
+            </li>
+            <li class="price__offerings" mdcBody2>
+                Unlimited IP Whitelisting
             </li>
             <li class="price__offerings" mdcBody2>
                 Unlimited Api Keys
             </li>
 
-            <li class="price__offerings" mdcBody2>
+            <li class="price__offerings" mdcBody2 *ngIf="cacheLimitPretty">
                 {{cacheLimitPretty.limit}}{{cacheLimitPretty.unit}}/month cache storage
             </li>
 
-            <li class="price__offerings" mdcBody2>
-                {{pricePlan.cache_request_limit}} cached web requests
+            <li class="price__offerings" mdcBody2 *ngIf="service?.cache_request_limit">
+                {{service.cache_request_limit}} cached web requests
             </li>
-            <li *ngIf="pricePlan.overage_fees != 0" class="price__offerings" mdcBody2>
-                additional {{pricePlan.overage_fees}}&#162; gb/month in overage fees
+            <li *ngIf="service?.overage_fees && service?.overage_fees != 0" class="price__offerings" mdcBody2 >
+                additional {{service.overage_fees}}&#162; gb/month in overage fees
+            </li>
+
+            <li class="price__offerings">
+                SSL Requests
             </li>
 
         </ul>
@@ -33,7 +40,7 @@
 
     <mdc-card-actions>
 
-        <button mdc-button raised class="button-primary__stretched">Get Now</button>
+        <button mdc-button raised class="button-primary__stretched" (click)="subscribe()">Get Now</button>
 
     </mdc-card-actions>
 </mdc-card>
