--- a/src/app/pricing/pricing.component.scss
+++ b/src/app/pricing/pricing.component.scss
@@ -3,9 +3,15 @@
     grid-template-columns: repeat(4, 1fr);
     column-gap: 1rem;
     padding-bottom: 20px;
+    margin-top: 32px;
 
 }
-
+.load--container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 li.price__offerings {
     list-style-image: url("/assets/doughnut.svg");
     margin-bottom: 8px;
