--- a/src/app/whitelist/whitelist.component.scss
+++ b/src/app/whitelist/whitelist.component.scss
@@ -12,6 +12,9 @@ div.information-list {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 16px;
+    padding-bottom: 12px;
+    padding-top: 0px;
 
 }
 
@@ -20,9 +23,11 @@ div.information-list {
     display: flex;
     flex-direction: row;
     padding: 28px;
+    max-height: 80px;
     align-items: center;
     justify-content: space-between;
-    
+    flex: 1 0 16px;
+
 
     
 
