modified:   src/app/api/api.interceptor.ts removed comments 	modified:   src/app/api/api.service.ts can now save most recent user info. 	modified:   src/app/app.module.ts added shared modules 	deleted:    src/app/change-payment/change-payment.component.html 	deleted:    src/app/change-payment/change-payment.component.scss 	deleted:    src/app/change-payment/change-payment.component.ts 	modified:   src/app/dashboard/dashboard-routing.module.ts added modify-plan endpoint routing 	modified:   src/app/dashboard/dashboard.component.ts modified route list so the side nav now goes to the correct route 	modified:   src/app/dashboard/dashboard.module.ts added sharedmodule for payment component 	modified:   src/app/guards/login.guard.ts removed token requirement from api check_token call. 	modified:   src/app/models.ts deleted unnecessary code 	new file:   src/app/modify-plan/modify-plan.component.html 	new file:   src/app/modify-plan/modify-plan.component.scss added supplemental changes to stretch the component to 100% 	renamed:    src/app/change-payment/change-payment.component.spec.ts -> src/app/modify-plan/modify-plan.component.spec.ts 	new file:   src/app/modify-plan/modify-plan.component.ts added component 	modified:   src/app/pricing/pricing-card.component.html made pricing card more abstract and customizeable to promote reusability 	modified:   src/app/pricing/pricing-card.component.scss 	modified:   src/app/pricing/pricing-card.component.ts abstracted pricing cards subscription button to an output/customized text with default 	modified:   src/app/pricing/pricing.component.html 	modified:   src/app/signup/signup.component.ts fixed sign up component minor errors 	modified:   src/app/welcome-page/welcome-page.component.ts idr what i did here

--- a/src/app/pricing/pricing-card.component.html
+++ b/src/app/pricing/pricing-card.component.html
@@ -1,8 +1,8 @@
-<mdc-card>
+<mdc-card [outlined]="!(isSelected && nickname == ($user | async)?.data?.plan)">
     <div class="card__title">
         <div mdcHeadline5 *ngIf="plan?.nickname">{{plan.nickname}}</div>
         <p class="card__subtitle" *ngIf="service?.description">{{service?.description}}</p>
-        <div *ngIf="plan?.amount">{{(plan?.amount / 100) | currency: 'USD':'symbol'}}/month</div>
+        <div >{{(plan?.amount / 100) | currency: 'USD':'symbol'}}/month</div>
     </div>
 
     <div>
@@ -40,7 +40,12 @@
 
     <mdc-card-actions>
 
-        <button mdc-button raised class="button-primary__stretched" (click)="subscribe()">Get Now</button>
+        <button mdc-button raised class="button-primary__stretched" (click)="subscribe()" [disabled]="isSelected && ($user | async)?.data?.plan == nickname"> 
+            <mdc-button-label>
+            {{(isSelected && ($user | async)?.data?.plan == nickname)? "Already Subscribed": callToAction || "Subscribe" }}
+            </mdc-button-label>
+        
+        </button>
 
     </mdc-card-actions>
 </mdc-card>
