--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,6 +3,13 @@
     <span mdcHeadline3 style="margin-top: 12px;" class="animation--entry-title-container">Welcome to <span style="font-family: Inconsolata, monospace">teenielink.dev</span></span>
     <span mdcHeadline4 class="animation--entry-subtitle-container subtitle">Sign Up.</span>
 </div>
+
+<!--TODO fix this to have more comprehensive animations-->
+    <!-- <div class="loading-container" #loading>
+        <mat-spinner diameter="120"></mat-spinner>
+    </div> -->
+
+
 <div class="signup-container">
     <form [formGroup]="signUpFormGroup"  class="signup-holder">
         <mdc-form-field fluid>
