--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@
 @use "components/table";
 @use "components/checkbox";
 @use "body";
+@use "grids";
 
 @use "@material/typography/mdc-typography";
 @use "@angular-mdc/theme/material";
