--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -11,6 +11,14 @@ $text-duration: 0.4s;
 
 }
 
+.loading-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
 .StripeElement {
 
     padding: 4px 12px;
