--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
 @use "components/grid";
 @use "components/menu";
 @use "components/table";
+@use "components/snackbar";
 @use "components/checkbox";
 @use "body";
 @use "grids";
