--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -1,4 +1,5 @@
-<h2 mdcHeadline4>Getting a Link Preview of a URL</h2>
+<div>
+    <h2 mdcHeadline4>Getting a Link Preview of a URL</h2>
 <p mdcBody1>To retrieve a link preview, simply send a Get Request with your 
     <span class="code">apikey</span> tag in the header and the <span class="code">url</span> as an query parameter</p>
 
@@ -9,6 +10,8 @@
     <br> --request "GET" "https://api.teenielink.dev/v1/preview?url=https://example.com"
 </samp>
 
-<code class="code example">
-    {{jsonExample | json}}
-</code>
+<h1 mdcHeadline6>Curl GET Response Example</h1>
+<pre innerHTML="{{jsonExample | beautifyJson}}">
+    
+</pre>
+</div>
