--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,7 @@ html, body { height: 100%; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+app-documentation {
+    width: 100%;
+    height: 100%;
+}
