added loading feature to modify-plan component

--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -1,4 +1,3 @@
-<div>
     <h2 mdcHeadline4>Getting a Link Preview of a URL</h2>
 <p mdcBody1>To retrieve a link preview, simply send a Get Request with your 
     <span class="code">apikey</span> tag in the header and the <span class="code">url</span> as an query parameter</p>
@@ -11,7 +10,4 @@
 </samp>
 
 <h1 mdcHeadline6>Curl GET Response Example</h1>
-<pre innerHTML="{{jsonExample | beautifyJson}}">
-    
-</pre>
-</div>
+<app-response-example [example]="jsonExample"></app-response-example>
