--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,8 @@
 @use "components/checkbox";
 @use "body";
 @use "grids";
+@use "prism-theme";
+
 
 @use "@material/typography/mdc-typography";
 @use "@angular-mdc/theme/material";
