--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -17,8 +17,7 @@
     justify-content: space-between;
 }
 .mdc-drawer-app-content {
-    height: 100%;
-    width: 100%;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,4 +25,6 @@
     margin-left: 24px;
     height: 100%;
     width: 100%;
+    overflow-y: scroll;
+    
 }
