--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -55,11 +55,22 @@ $text-duration: 0.4s;
     flex-direction: column;
     justify-content: center;
     padding: 16px;
-    max-height: 378px;
     height: 100%;
+    align-items: center;
     
 }
 
+
+.signup-form {
+    width: 100%;
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 16px;
+    max-height: 378px;
+    height: 100%;
+}
 @keyframes enterpagetransition{
     from {
         transform: translateX(-100%);
@@ -143,6 +154,13 @@ $text-duration: 0.4s;
 
 }
 
+
+.container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .signup-container {
     align-items: center;
     display: flex;
