made demo partially functional. need to add an iframe

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,6 +1,6 @@
 <div mdcHeadline3>Preview any website with a simple click.</div>
 
 <mdc-form-field class="text-field--holder">
-    <mdc-text-field outlined class="demo-text-field--outlined"></mdc-text-field>
-    <button mdc-button unelevated class="demo-button">Go!</button>
+    <mdc-text-field outlined class="demo-text-field--outlined" [formControl]="demoControl"></mdc-text-field>
+    <button mdc-button unelevated class="demo-button" (click)="displayPreview()">Go!</button>
 </mdc-form-field>
