--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -27,7 +27,7 @@
         <a mdc-button unelevated class="button-primary button" (click)="signup()">
           <span mdcButtonLabel >Sign Up</span>
         </a>
-        <a mdc-button outlined (click)="login()">
+        <a mdc-button outlined (click)="login()" style="height: 44px;">
           Login
         </a>
       </mdc-top-app-bar-section>
