--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
 @use "components/grid";
 @use "components/menu";
 @use "components/table";
+@use "components/button-bar";
 @use "components/snackbar";
 @use "components/checkbox";
 @use "body";
@@ -37,4 +38,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.dot {
+    border-radius: 50%;
+    width: 1.2rem;
+    height: 1.2rem;
+    margin: 5rem 0.8rem;
+    background-color: #000;
 }
