--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,10 +1,10 @@
 <div class="loader-container">
 
 
-    <div class="bounce-loader">
-        <span></span>
-        <span></span>
-        <span></span>
+    <div class="bounce-loader" >
+        <span [style.background-color]="backgroundColor || 'white'"></span>
+        <span [style.background-color]="backgroundColor || 'white'"></span>
+        <span [style.background-color]="backgroundColor || 'white'"></span>
     </div>
 
 
