--- a/src/app/demo/demo.component.scss
+++ b/src/app/demo/demo.component.scss
@@ -13,6 +13,50 @@
 
 
 }
+.preview-img {
+    height: auto;
+    max-height: 140px;
+    max-width: 180px;
+    max-width: auto;
+    width: 140px;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.no-preview-img {
+    height: 140px;
+    /* max-height: 329px; */
+    width: 200px;
+    /* max-width: 300px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+mdc-icon.preview-img {
+    font-size: 48px;
+    height: 48px;
+    width: 48px;
+    color: #f5f5f5;
+
+}
+mdc-card {
+    border-radius: 0;
+    max-width: 540px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.preview-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: start;
+    padding-left: 1.5rem;
+}
 
 
 .text-field--holder {
